--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Mini Pools</string>
     <string name="pool_creation">Pool created on %1$s by %2$s</string>
+    <string name="header_contributions">Contributions</string>
 </resources>
