--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="hint_amount">Enter amount (in cents)</string>
     <string name="cancel">Cancel</string>
     <string name="contribute">Contribute</string>
+    <string name="contribution_amount">$%1$.2f</string>
 </resources>
